src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

@import "tailwindcss";

@theme {
  --font-sans: Inter, sans-serif;
}

input[type="search"]::-webkit-search-cancel-button {
  cursor: pointer;
}

